# software-challenge

./: .gitignore  LICENSE  __init__.spec  main.py  pyproject.toml  requirements.txt  start.sh
src/software_challenge/: __init__.py
